| Bug #42974 | MySQL Cluster Solaris compilation error | ||
|---|---|---|---|
| Submitted: | 18 Feb 2009 15:27 | Modified: | 18 Feb 2009 19:27 |
| Reporter: | Guido Ostkamp | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S1 (Critical) |
| Version: | * | OS: | Solaris |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[18 Feb 2009 19:19]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/66790 2843 Jonas Oreland 2009-02-18 ndb - bug#42974 - compile error with forte/visual studio
[18 Feb 2009 19:23]
Bugs System
Pushed into 5.1.32-ndb-6.2.17 (revid:jonas@mysql.com-20090218191918-yivyjr6g2byn0eip) (version source revid:jonas@mysql.com-20090218191918-yivyjr6g2byn0eip) (merge vers: 5.1.32-ndb-6.2.17) (pib:6)
[18 Feb 2009 19:24]
Bugs System
Pushed into 5.1.32-ndb-6.3.23 (revid:jonas@mysql.com-20090218192137-iw70vverxzvxu5ju) (version source revid:jonas@mysql.com-20090218192137-iw70vverxzvxu5ju) (merge vers: 5.1.32-ndb-6.3.23) (pib:6)
[18 Feb 2009 19:24]
Bugs System
Pushed into 5.1.32-ndb-6.4.3 (revid:jonas@mysql.com-20090218192228-lyo4p472va5umgxp) (version source revid:jonas@mysql.com-20090218192228-lyo4p472va5umgxp) (merge vers: 5.1.32-ndb-6.4.3) (pib:6)
[18 Feb 2009 19:27]
Jonas Oreland
no need for docs, as this was never released

Description: The latest bazaar Version of MySQL cluster fails to compile on Solaris: ... make[6]: Entering directory `/export/home/ostkamp/mysql_2nd/storage/ndb/src/kernel/blocks' source='ndbcntr/NdbcntrMain.cpp' object='NdbcntrMain.o' libtool=no \ DEPDIR=.deps depmode=none /bin/bash ../../../../../depcomp \ CC -DHAVE_CONFIG_H -DNDEBUG -I. -I../../../../../include -I../../../../../storage/ndb/src/kernel/blocks/dblqh -I../../../../../zlib -I. -I../../../../../include -I../../../../../storage/ndb/include -I../../../../../include -I../../../../../storage/ndb/include -I../../../../../storage/ndb/src/kernel/vm -I../../../../../storage/ndb/src/kernel/error -I../../../../../storage/ndb/src/kernel -I../../../../../storage/ndb/include/kernel -I../../../../../storage/ndb/include/transporter -I../../../../../storage/ndb/include/debugger -I../../../../../storage/ndb/include/mgmapi -I../../../../../storage/ndb/include/mgmcommon -I../../../../../storage/ndb/include/ndbapi -I../../../../../storage/ndb/include/util -I../../../../../storage/ndb/include/portlib -I../../../../../storage/ndb/include/logger -I../../../../../zlib -instances=static -xO5 -fast -g -mt -m64 -DHAVE_RWLOCK_T -c -o NdbcntrMain.o `test -f 'ndbcntr/NdbcntrMain.cpp' || echo './'`ndbcntr/NdbcntrMain.cpp "../../../../../storage/ndb/include/transporter/TransporterDefinitions.hpp", line 112: Warning: Types cannot be declared in anonymous union. "../../../../../storage/ndb/include/mgmapi/ndb_logevent.h", line 763: Warning: Types cannot be declared in anonymous union. "../../../../../storage/ndb/include/kernel/NodeState.hpp", line 146: Warning: Types cannot be declared in anonymous union. "ndbcntr/NdbcntrMain.cpp", line 360: Error: Cannot use const char* to initialize char*. 1 Error(s) and 3 Warning(s) detected. make[6]: *** [NdbcntrMain.o] Error 1 make[6]: Leaving directory `/export/home/ostkamp/mysql_2nd/storage/ndb/src/kernel/blocks' make[5]: *** [all-recursive] Error 1 make[5]: Leaving directory `/export/home/ostkamp/mysql_2nd/storage/ndb/src/kernel/blocks' make[4]: *** [all-recursive] Error 1 make[4]: Leaving directory `/export/home/ostkamp/mysql_2nd/storage/ndb/src/kernel' make[3]: *** [all-recursive] Error 1 make[3]: Leaving directory `/export/home/ostkamp/mysql_2nd/storage/ndb/src' make[2]: *** [all-recursive] Error 1 make[2]: Leaving directory `/export/home/ostkamp/mysql_2nd/storage/ndb' make[1]: *** [all-recursive] Error 1 make[1]: Leaving directory `/export/home/ostkamp/mysql_2nd/storage' make: *** [all-recursive] Error 1 We are using revision tomas.ulin@sun.com-20090218084745-9oypy4i4nzplzv6j dated Wed 2009-02-18 09:47:45 +0100. Compilation was done with Sun Studio 12 on Sparc Solaris 10 using configure CC=cc CXX=CC CFLAGS="-xO5 -fast -g -mt -m64" CXXFLAGS="-xO5 -fast -g -mt -m64" ./configure --prefix=/export/home/wsch/6.4_2009_01_29 --with-plugins=max --without-docs --without-man Regards Guido Ostkamp How to repeat: Try to build it.