ndb - bug#42974 - compile error with forte/visual studio